--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     --accent: #A8ACFF;
     --dark: #040751;
     --light: #E7E8FF;
+    --online: #1FD516;
 }
 
 *{ padding: 0; margin: 0; box-sizing: border-box;
