--- a/src/components/RightSidebar/RightSidebar.css
+++ b/src/components/RightSidebar/RightSidebar.css
@@ -1,26 +1,32 @@
 .rs{
     height: 100svh;
-    color: var(--light);
+    color: var(--dark);
     position: relative;
     overflow-y: scroll;
-    padding: 0 25px;
+    padding: 25px;
+
+    display: flex; flex-direction: column; gap: 80px;
 }
 
 .rs-profile{
-    padding-top: 60px;
-    text-align: center;
-    max-width: 70%;
-    margin: auto;
+    display: flex; flex-direction: column; gap: 20px;
+    align-items: center; justify-content: center;
 }
 
 .rs-profile img{
-    width: 110px;
+    margin-top: 5px;
+    width: 120px;
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
 
+.rs-profile .rs-text{
+    display: flex; flex-direction: column; gap: 0;
+    align-items: center; justify-content: center;
+}
+
 .rs-profile h3, .rs-profile p{
-    color: var(--light);
+    color: var(--dark);
 }
 
 .rs-profile h3{
@@ -31,13 +37,8 @@
 }
 
 .rs-profile p{
-    font-size: 12px;
+    font-size: 14px;
     opacity: 0.8;
-}
-
-.rs hr{
-    border-color: var(--primary);
-    margin: 15px 0;
 }
 
 .rs-media p{
@@ -65,20 +66,4 @@
 
 .rs-media div img:hover{
     opacity: 1;
-}
-
-.rs button{
-    position: absolute;
-    bottom: 25px; left: 50%;
-    transform: translateX(-50%);
-    background-color: var(--dark); color: var(--accent);
-    border: none; border-radius: 20px;
-    font-size: 12px; font-family: 'poppins-bold';
-    text-transform: uppercase;
-    padding: 10px 40px;
-    cursor: pointer;
-}
-
-.rs button:hover{
-    background-color: var(--secondary); color: var(--light);
 }
