--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -1,17 +1,18 @@
 .chat-box{
     height: calc(100svh - 50px);
     position: relative;
-    background-color: var(--light);
-    border-radius: 20px;
+    border: 1px solid var(--primary);
+    border-radius: 32px;
     overflow: hidden;
-    margin: 25px 0 0;
+    margin: auto 0;
 }
 
 .chat-user{
-    padding: 20px 20px 10px;
+    padding: 10px 20px 10px 12px;
     display: flex; gap: 10px;
     align-items: center;
-    border-bottom: 1px solid var(--accent);
+    background-color: white;
+    border-bottom: 1px solid var(--primary);
 }
 
 .chat-user img{
@@ -37,6 +38,7 @@
     align-items: center;
     padding: 15px 20px 15px 30px;
     background: white;
+    border-top: 1px solid var(--primary);
     position: absolute;
     bottom: 0; left: 0; right: 0;
 }
@@ -55,12 +57,12 @@
 
 .chat-box svg{
     width: 30px; height: 30px;
-    color: var(--dark);
+    color: var(--primary);
     cursor: pointer;
 }
 
 .chat-input label:hover svg, .chat-box .send-button:hover{
-    color: var(--primary);
+    color: var(--dark);
 }
 
 .chat-input input{ 
@@ -101,8 +103,8 @@
 }
 
 .msg{
-    color: var(--light);
-    background-color: var(--primary);
+    color: var(--primary);
+    border: 1px solid var(--primary);
     padding: 12px 16px;
     max-width: 50%;
     font-size: 14px;
@@ -110,7 +112,12 @@
     margin-bottom: 30px;
 }
 
-.r-msg .msg{ border-radius: 16px 16px 16px 0; background-color: var(--dark);}
+.r-msg .msg{
+    color: var(--dark);
+    border-radius: 16px 16px 16px 0;
+    background-color: var(--accent);
+    border: 1px solid transparent;
+}
 
 .msg-img{
     max-width: 50%;
@@ -128,4 +135,39 @@
 .chat-welcome img{
     width: 400px;
     cursor: default;
+}
+
+
+
+@media (max-width: 700px) {
+    body {
+        background-color: var(--light);
+    }
+
+    .chat-box{
+        height: 100svh;
+        padding: 3svh 0;
+        border: none; border-radius: 0px;
+    }
+
+    .chat-user, .chat-input{
+        width: calc(100% - 40px);
+        margin: auto;
+        border: none;
+        border-radius: 100px;
+        padding-top: 10px; padding-bottom: 10px;
+    }
+
+    .chat-user p{font-size: 17px;}
+
+    .chat-input{bottom: 3svh;}
+
+    .chat-box svg, .send-button{
+        width: 25px; height: 25px;
+        color: var(--primary);
+        cursor: pointer;
+    }
+
+
+
 }
