--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -40,3 +40,12 @@
     color: var(--light);
     font-family: 'candal';
 }
+
+
+@media (max-width: 700px) {
+
+    .chat-box-layout{
+        height: 100dvh;
+        display: flex; flex-direction: column;
+    }
+}
