--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -44,6 +44,10 @@
 
 @media (max-width: 700px) {
 
+    body{
+        background-color: var(--light);
+    }
+
     .chat-box-layout{
         height: 100dvh;
         display: flex; flex-direction: column;
