--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -49,7 +49,7 @@
     }
 
     .chat-box-layout{
-        height: 100dvh;
+        height: 100svh;
         display: flex; flex-direction: column;
     }
 }
