--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -146,6 +146,7 @@
         flex: 1;
         padding: 0 0 3svh;
         border: none; border-radius: 0px;
+        background-color: bisque;
     }
 
     .chat-user{
