--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -49,7 +49,8 @@
     }
 
     .chat-box-layout{
-        height: 100svh;
+        height: 100%;
         display: flex; flex-direction: column;
+        overflow: hidden;
     }
 }
