--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -49,8 +49,7 @@
     }
 
     .chat-box-layout{
-        height: 100%;
+        height: 100dvh;
         display: flex; flex-direction: column;
-        overflow: hidden;
     }
 }
