--- a/src/components/RightSidebar/RightSidebar.css
+++ b/src/components/RightSidebar/RightSidebar.css
@@ -13,7 +13,7 @@
     align-items: center; justify-content: center;
 }
 
-.rs-profile img{
+.rs-profile .profile-img{
     margin-top: 5px;
     width: 120px;
     aspect-ratio: 1/1;
@@ -33,8 +33,19 @@
     font-size: 18px;
     display: flex; gap: 5px;
     align-items: center; justify-content: center;
-    margin: 5px 0px;
 }
+
+.online-name{
+    display: flex; gap: 5px;
+    align-items: center; justify-content: center;
+    height: fit-content;
+}
+
+.online-name h3{
+    margin-top: 0;
+}
+
+.rs-profile h3 img{ background-color: tomato;}
 
 .rs-profile p{
     font-size: 14px;
@@ -83,11 +94,11 @@
 
     .rs-profile{ gap: 5px;}
 
-    .rs-profile img{width: 80px;}
+    .rs-profile .profile-img{width: 80px;}
 
-    .rs-profile h3, .rs-profile p{color: var(--primary);}
+    .rs-profile h3, .rs-profile p{color: var(--light);}
 
-    .rs-profile p{ font-size: 12px; margin-top: -8px;}
+    .rs-profile p{  margin-top: -8px;}
 
     .rs-media{display: none;}
 
