--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -204,13 +204,15 @@
 
 @media (max-width: 700px) {
 
-    .ls {
-        padding: 20px;
-    }
+    .chat{ display: block;}
 
-    .ls-container {
-        width: calc(100vw - 40px);
-    }
+    .ls {padding: 0 20px;}
+
+    .ls-top {padding: 0 0 40px;}
+
+    .ls-nav .menu .point div{ background-color: var(--accent);}
+
+    .ls-search { margin-top: 40px;}
 
     .ls-search input {
         font-size: 16px;
