--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -27,19 +27,6 @@
     max-width: 120px;
 }
 
-.ls-nav .menu .point {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    cursor: pointer;
-}
-
-.ls-nav .menu .point div {
-    width: 5px;
-    height: 5px;
-    background-color: var(--primary);
-    border-radius: 50%;
-}
 
 .ls-search {
     background-color: white;
@@ -114,41 +101,6 @@
     font-size: 12px;
 }
 
-.ls-nav .menu {
-    position: relative;
-    padding: 10px 0px;
-}
-
-.menu .sub-menu-container {
-    position: absolute;
-    top: calc(100% - 50px);
-    right: 0%;
-    width: 150px;
-    display: none;
-    padding-top: 50px;
-    z-index: 1;
-}
-
-.menu .sub-menu {
-    padding: 20px;
-    border-radius: 10px;
-    background-color: white;
-    border: 1px solid var(--primary);
-    color: var(--dark);
-}
-
-.sub-menu hr {
-    border: none;
-    height: 1px;
-    background-color: var(--primary);
-    margin: 8px 0;
-}
-
-.sub-menu p {
-    cursor: pointer;
-    font-size: 12px;
-}
-
 .friends.border img {
     border: 3px solid var(--online);
 }
@@ -157,42 +109,14 @@
     color: var(--online);
 }
 
-.ls button {
-    background-color: var(--dark);
-    color: var(--light);
-    border: none;
-    border-radius: 20px;
-    font-size: 15px;
-    font-family: 'poppins-bold';
-    padding: 5px 20px;
-    cursor: pointer;
-}
 
 
 
 
 @media (min-width: 700px) {
 
-    .ls-nav .menu .point:hover div {
-        background-color: var(--secondary);
-    }
-
     .friends:hover {
         background-color: var(--accent);
-    }
-
-    .sub-menu p:hover {
-        color: var(--primary);
-    }
-
-    .menu:hover .sub-menu-container,
-    .sub-menu-container:hover {
-        display: block;
-    }
-
-    .menu:hover .point div,
-    .sub-menu-container:hover .point div {
-        background-color: var(--secondary);
     }
 
     .ls button:hover {
@@ -231,7 +155,13 @@
         color: var(--light);
     }
 
-    .ls button {
+    .ls .button-edit {
+        background-color: var(--accent);
+        color: var(--primary);
+        font-size: 12px;
+    }
+
+    .ls .button-logout {
         background-color: var(--light);
         color: var(--primary);
     }
