--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -77,11 +77,13 @@
     padding-bottom: 70px;
     overflow-y: scroll;
     display: flex; flex-direction: column-reverse;
+    gap: 10px;
 }
 
 .s-msg div p, .r-msg div p{
     text-align: center;
     font-size: 10px;
+    padding: 0 5px ;
     opacity: 0.5;
 }
 
@@ -92,14 +94,13 @@
 }
 
 .s-msg, .r-msg{
-    display: flex; gap: 15px;
-    align-items: end; justify-content: end;
+    display: flex; flex-direction: column; gap: 5px;
+    align-items: end;
     padding: 0 20px;
 }
 
 .r-msg{
-    flex-direction: row-reverse;
-    justify-content: start;
+    align-items: start;
 }
 
 .msg{
@@ -108,13 +109,11 @@
     padding: 12px 16px;
     max-width: 50%;
     font-size: 14px;
-    border-radius: 16px 16px 0 16px;
-    margin-bottom: 30px;
+    border-radius: 16px;
 }
 
 .r-msg .msg{
     color: var(--dark);
-    border-radius: 16px 16px 16px 0;
     background-color: var(--accent);
     border: 1px solid transparent;
 }
@@ -165,7 +164,7 @@
         border: none;
         border-radius: 100px;
         padding: 10px 10px 10px 20px;
-        bottom: 3svh;
+        bottom: 20px;
     }
 
     .chat-box svg, .send-button{
@@ -176,11 +175,10 @@
     .msg{
         color: var(--light);
         border: 1px solid var(--light);
+        max-width: 70%;
     }
 
-    .s-msg, .r-msg{padding: 0 20px;}
-
-    .s-msg div img, .r-msg div img{ width: 45px;}
+    .s-msg div img, .r-msg div img{ display: none;}
 
     .s-msg div p, .r-msg div p{
         color: var(--light);
