--- a/src/components/RightSidebar/RightSidebar.css
+++ b/src/components/RightSidebar/RightSidebar.css
@@ -80,11 +80,6 @@
 }
 
 
-
-
-
-
-
 @media (max-width: 700px) {
 
     .rs{
@@ -108,5 +103,10 @@
         background-color: transparent;
         border: none;
     }
+}
+
+@media (min-width: 700px) {
+
+    .button-back{ display: none;}
 
 }
