--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -46,11 +46,16 @@
 
     .chat{
         height: 100dvh;
-        background-color: var(--primary);
+        background-color: green;
+    }
+
+    .chat-mobile{
+        background-color: yellow;
     }
 
     .chat-box-layout{
         height: 100dvh;
         display: flex; flex-direction: column;
+        background-color: red;
     }
 }
