--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -45,7 +45,7 @@
 @media (max-width: 700px) {
 
     .chat{
-        height: 100dvh;
+        height: 100svh;
         background-color: green;
     }
 
