--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -131,7 +131,7 @@
     .chat{ display: block;}
 
     .ls {
-        padding: 0 20px; height: 100vh; width: 100vw;
+        padding: 0 20px; height: 100svh; width: 100vw;
         background-color: pink;
     }
 
