--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -16,7 +16,7 @@
 } */
 
 .chat{
-    min-height: 100vh;
+    height: 100svh;
     display: grid;
     place-items: center;
 /*     background: linear-gradient(
