--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -163,7 +163,7 @@
         border: none;
         border-radius: 100px;
         padding: 10px 10px 10px 20px;
-        bottom: 10px; 
+        bottom: 0; 
     }
 
     .chat-box svg, .send-button{
