--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -7,6 +7,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+
+    overflow: hidden;
 }
 
 .ls-container {
