--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -51,7 +51,7 @@
     }
 
     .chat-box-layout{
-        height: 100dvh;
+        height: 100svh;
         display: flex; flex-direction: column;
         overflow: hidden;
     }
