--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -50,6 +50,10 @@
         overflow: hidden;
     }
 
+    .chat-mobile{
+        overflow: hidden;
+    }
+
     .chat-box-layout{
         height: 100svh;
         display: flex; flex-direction: column;
