--- a/src/components/RightSidebar/RightSidebar.css
+++ b/src/components/RightSidebar/RightSidebar.css
@@ -79,6 +79,26 @@
     opacity: 1;
 }
 
+.button-absolute{
+    position: absolute;
+    top: 40px; left: 30px;
+    width: calc(100vw - 60px);
+
+    display: flex; justify-content: space-between; /* ← separa os filhos */
+    align-items: center;
+
+}
+
+.button-absolute button{
+    background-color: transparent;
+    border: none;
+}
+
+.button-absolute img{
+    height: 25px;
+    width: auto;
+}
+
 
 @media (max-width: 700px) {
 
@@ -96,13 +116,6 @@
     .rs-profile p{  margin-top: -8px;}
 
     .rs-media{display: none;}
-
-    .button-back{
-        position: absolute;
-        top: 40px; left: 30px;
-        background-color: transparent;
-        border: none;
-    }
 }
 
 @media (min-width: 700px) {
