--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root{
     --primary: #464FF9;
-    --secondary: #EA77D1;
+    --secondary: #333ABD;
     --accent: #A8ACFF;
     --dark: #040751;
     --light: #E7E8FF;
