--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -74,7 +74,7 @@
 
 .chat-msg{
     height: calc(100% - 70px);
-    padding-bottom: 70px;
+    padding-bottom: 10px;
     overflow-y: scroll;
     display: flex; flex-direction: column-reverse;
     gap: 10px;
@@ -151,7 +151,6 @@
 
     .chat-msg{
         height: 100%;
-        padding-bottom: 70px;
         overflow-y: scroll;
         display: flex; flex-direction: column-reverse;
     }
@@ -184,10 +183,6 @@
     }
 
     .chat-welcome{
-        width: 100vw; height: 100svh;
-    }
-
-    .chat-welcome img{
-        width: 30vw;
+        display: none;
     }
 }
