--- a/src/pages/ProfileUpdate/ProfileUpdate.css
+++ b/src/pages/ProfileUpdate/ProfileUpdate.css
@@ -95,7 +95,7 @@
         margin: auto;
     }
 
-    .tb .button-chat{ color: var(--primary);}
-    .tb .button-profile{ color: var(--accent);}
+/*     .tb .button-chat{ color: var(--primary);}
+    .tb .button-profile{ color: var(--accent);} */
 
 }
