--- a/src/components/ToolBar/ToolBar.css
+++ b/src/components/ToolBar/ToolBar.css
@@ -1,20 +1,28 @@
 .tb{
     position: absolute;
-    bottom: 0; left: 0;
+    bottom: -200px; left: 0;
+    height: 270px;
     width: 100vw;
     background-color: var(--secondary);
     padding: 20px 0;
 
     display: flex; gap: 50px;
-    align-items: center; justify-content: center;
+    align-items: start; justify-content: center;
 }
 
 .tb button{
     border: none;
     background-color: transparent;
-    color: var(--primary);
 }
 
 .tb button p{
     font-family: 'poppins-bold';
+}
+
+.button-profile{
+    color: var(--accent);
+}
+
+.button-ischat, .button-isprofile{
+    color: var(--primary);
 }
