--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -51,9 +51,9 @@
 
 @media (max-width: 700px) {
 
-    body{
+    /* body{
         background-color: var(--primary);
-    }
+    } */
 
     .chat{
         height: 100svh;
