--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -25,20 +25,21 @@
 }
 
 .login-form h2 {
-    font-family: 'candal';
-    text-transform: uppercase;
+    font-family: 'poppins-bold';
     color: var(--primary);
 }
 
 .form-input {
     padding: 8px 10px;
     border: 1px solid var(--primary);
-    border-radius: 4px;
+    border-radius: 8px;
     background-color: var(--light);
+    color: var(--primary);
 }
 
 .form-input::placeholder {
     color: var(--primary);
+    opacity: 0.5;
 }
 
 .form-input:focus {
@@ -52,15 +53,14 @@
     gap: 5px;
     align-items: center;
     font-size: 11px;
-    color: #808080;
+    color: var(--primary);
 }
 
 .login-term input[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
-    width: 15px;
-    height: 15px;
-    border: 2px solid #aaa;
+    width: 19px; height: 15px;
+    border: 1px solid var(--primary);
     border-radius: 4px;
     cursor: pointer;
     vertical-align: middle;
@@ -91,7 +91,7 @@
 
 .login-toggle {
     font-size: 13px;
-    color: #5c5c5c;
+    color: var(--dark);
 }
 
 .login-toggle span {
